--- a/install
+++ b/install
@@ -4,8 +4,9 @@
 # CLI Installer Script
 # Installs all CLI tools from your GitHub repo
 # and makes them globally accessible.
-# 
-# base <(curl -s https://aslamanver.github.io/cli/install)
+#
+# Usage:
+#   bash <(curl -s https://aslamanver.github.io/cli/install)
 # ==========================================================
 
 set -e
@@ -14,23 +15,44 @@ REPO_URL="https://github.com/aslamanver/cli"
 INSTALL_DIR="$HOME/.cli"
 
 echo "🚀 Installing CLI tools from $REPO_URL ..."
+echo ""
 
-# Create install directory if missing
+# ----------------------------------------------------------
+# 🧩 Check for required dependencies
+# ----------------------------------------------------------
+for cmd in curl tar; do
+  if ! command -v $cmd >/dev/null 2>&1; then
+    echo "❌ '$cmd' is required but not installed."
+    exit 1
+  fi
+done
+
+# ----------------------------------------------------------
+# 📁 Create install directory
+# ----------------------------------------------------------
 mkdir -p "$INSTALL_DIR"
 
-# Download all files together as tar.gz from main branch
+# ----------------------------------------------------------
+# ⬇️  Download all files together as tar.gz from main branch
+# ----------------------------------------------------------
 echo "⬇️  Downloading repository archive..."
 curl -fsSL "$REPO_URL/archive/refs/heads/main.tar.gz" -o /tmp/cli.tar.gz
 
-# Extract all files into install directory
+# ----------------------------------------------------------
+# 📦 Extract and install
+# ----------------------------------------------------------
 echo "📦 Extracting all files..."
 tar -xzf /tmp/cli.tar.gz -C /tmp
 cp -r /tmp/cli-main/* "$INSTALL_DIR/"
 
-# Make all scripts executable
+# ----------------------------------------------------------
+# 🔧 Make scripts executable
+# ----------------------------------------------------------
 chmod -R +x "$INSTALL_DIR"
 
-# Detect shell config file
+# ----------------------------------------------------------
+# 🧠 Detect shell config file
+# ----------------------------------------------------------
 SHELL_RC=""
 if [ -n "$ZSH_VERSION" ]; then
     SHELL_RC="$HOME/.zshrc"
@@ -40,7 +62,9 @@ else
     SHELL_RC="$HOME/.profile"
 fi
 
-# Add install directory to PATH if not already there
+# ----------------------------------------------------------
+# 🛠️ Add to PATH if not already included
+# ----------------------------------------------------------
 if ! grep -q "$INSTALL_DIR" "$SHELL_RC"; then
     echo "export PATH=\"\$PATH:$INSTALL_DIR\"" >> "$SHELL_RC"
     echo "✅ Added $INSTALL_DIR to PATH in $SHELL_RC"
@@ -48,12 +72,17 @@ else
     echo "ℹ️  PATH already includes $INSTALL_DIR"
 fi
 
-# Cleanup temporary files
+# ----------------------------------------------------------
+# 🧹 Cleanup
+# ----------------------------------------------------------
 rm -rf /tmp/cli.tar.gz /tmp/cli-main
 
+# ----------------------------------------------------------
+# 🎉 Done!
+# ----------------------------------------------------------
 echo ""
 echo "✅ Installation complete!"
 echo "👉 Run 'source $SHELL_RC' or open a new terminal to start using your CLI tools."
 echo ""
-echo "Installed directory: $INSTALL_DIR"
+echo "📂 Installed directory: $INSTALL_DIR"
 echo ""
