--- a/install
+++ b/install
@@ -85,4 +85,5 @@ echo "📂 Installed directory: $INSTALL_DIR"
 # ----------------------------------------------------------
 # 🔄 Source the shell config to apply changes immediately
 # ----------------------------------------------------------
+echo "🔄 Sourcing $SHELL_RC to apply changes..."
 source $SHELL_RC
